changes gallary alt title

--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
       <div class="gallary">
         <h2>معرض الانجازات</h2>
         <div class="images-box">
-          <img src="imgs/one.jpg" alt="build 1" />
-          <img src="imgs/two.jpg" alt="build 2" />
-          <img src="imgs/three.jpg" alt="build 3" />
-          <img src="imgs/five.jpg" alt="build 4" />
-          <img src="imgs/six.jpg" alt="build 5" />
-          <img src="imgs/seven.jpg" alt="build 6" />
-          <img src="imgs/eight.jpg" alt="build 7" />
-          <img src="imgs/nine.jpg" alt="build 8" />
-          <img src="imgs/ten.jpg" alt="build 9" />
+          <img src="imgs/one.jpg" alt="المشروع 1" />
+          <img src="imgs/two.jpg" alt="المشروع 2" />
+          <img src="imgs/three.jpg" alt="المشروع 3" />
+          <img src="imgs/five.jpg" alt="المشروع 4" />
+          <img src="imgs/six.jpg" alt="المشروع 5" />
+          <img src="imgs/seven.jpg" alt="المشروع 6" />
+          <img src="imgs/eight.jpg" alt="المشروع 7" />
+          <img src="imgs/nine.jpg" alt="المشروع 8" />
+          <img src="imgs/ten.jpg" alt="المشروع 9" />
         </div>
       </div>
     </div>
