fixed about us img

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </a>
         </div>
         <div class="img-box">
-          <img src="/imgs/about.svg" alt="" />
+          <img src="./imgs/about.svg" alt="" />
         </div>
       </div>
     </div>
