edit company name

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="content">
               <h3>حجر الاساس</h3>
               <p style="line-height: 1.5">
-                بفخر وإثارة، نعلن وضع حجر الأساس لمؤسسة محمد للتطوير العقاري.
+                بفخر وإثارة، نعلن وضع حجر الأساس لمؤسسة ابو قير للتطوير العقاري.
                 هذه اللحظة ليست مجرد بداية، بل هي بداية قصة طموحة للابتكار
                 والتميز في عالم العقارات. بواسطة هذا الحدث التاريخي، نبني أساسًا
                 قويًا يدعم طموحاتنا لتقديم مشاريع استثنائية وتحقيق أحلام
