changed student name

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <div class="info-container">
             <img src="/imgs/discussion.png" alt="" />
             <div class="user-info">
-              <h3>سيف سعيد سيف النصر</h3>
+              <h3>سيف سعيد سيف النصر حراز</h3>
               <span>2020/1085</span>
             </div>
           </div>
